# xxcloud

./: COMAKE  Makefile  README  README.md  addnode.py  addtask.py  delnode.py  gearmanjobclient.py  gearmanjobstop.py  mysqlLib.py  pbunittest.py  querynodes.py  upload.py
back/: gearmanclient.py  gearmanjob.py
conf/: pbrpc.conf
data/: README  bnitems_function_json.data  hisbased-pref.data  item_benchmark_json.data  nuomi_benchmark_json.data  nuomi_up.data  nuomi_up_online.data
doc/: APIInstruction.txt  (+1 more)
gearman/: nohup.out  (+1 more)
gearman/gear-0.5.5/: CONTRIBUTING.rst  README.rst  requirements.txt  setup.cfg  tox.ini
gearman/gear-0.5.5/.svn/: all-wcprops  entries
gearman/gear-0.5.5/.svn/text-base/: .testr.conf.svn-base  ChangeLog.svn-base  PKG-INFO.svn-base  test-requirements.txt.svn-base
gearman/gear-0.5.5/doc/.svn/: all-wcprops  entries
gearman/gear-0.5.5/doc/source/: conf.py
gearman/gear-0.5.5/doc/source/.svn/: all-wcprops  entries
gearman/gear-0.5.5/doc/source/.svn/text-base/: index.rst.svn-base
gearman/gear-0.5.5/gear/: acl.py
gearman/gear-0.5.5/gear.egg-info/: entry_points.txt  requires.txt
gearman/gear-0.5.5/gear.egg-info/.svn/: all-wcprops  entries
gearman/gear-0.5.5/gear.egg-info/.svn/text-base/: SOURCES.txt.svn-base  top_level.txt.svn-base
gearman/gear-0.5.5/gear/.svn/: all-wcprops  entries
gearman/gear-0.5.5/gear/.svn/text-base/: constants.py.svn-base
gearman/gear-0.5.5/gear/cmd/.svn/: all-wcprops  entries
gearman/gear-0.5.5/gear/tests/.svn/: all-wcprops  entries
gearman/gear-0.5.5/gear/tests/.svn/text-base/: test_gear.py.svn-base
(+5205 files in other folders)
