[metadata]
name = gear
author = OpenStack
author-email = openstack-dev@lists.openstack.org
summary = Pure Python Async Gear Protocol Library
description-file = 
	README.rst
home-page = http://pypi.python.org/pypi/gear
classifier = 
	Development Status :: 4 - Beta
	Environment :: Console
	Environment :: OpenStack
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python

[files]
packages = 
	gear

[global]
setup-hooks = 
	pbr.hooks.setup_hook

[entry_points]
console_scripts = 
	geard = gear.cmd.geard:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

